update tgh with benchmark